--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/db": "^0.14.8",
     "@astrojs/mdx": "^4.0.8",
+    "@astrojs/vercel": "^8.1.3",
+    "@auth/core": "^0.37.4",
+    "@tailwindcss/vite": "^4.0.15",
     "astro": "^5.2.5",
+    "auth-astro": "^4.2.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
     "rehype-katex": "^7.0.1",
-    "remark-math": "^6.0.0"
+    "remark-math": "^6.0.0",
+    "tailwindcss": "^4.0.15"
   }
 }
